// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper should have the default width and a calculated height when aspectRatio is passed 1`] = `
.c0 {
  position: relative;
  width: 480px;
  height: 0;
  padding-bottom: 75.18796992481202%;
}

<div
  className="c0"
/>
`;

exports[`Wrapper should have the default width and height when no width, height or aspectRatio props are passed 1`] = `
.c0 {
  position: relative;
  width: 480px;
  height: 180px;
}

<div
  className="c0"
/>
`;

exports[`Wrapper should have the passed height when the height prop is passed 1`] = `
.c0 {
  position: relative;
  width: 480px;
  height: 456px;
  max-width: 480px;
  max-height: 360px;
}

<div
  className="c0"
  height={456}
/>
`;

exports[`Wrapper should have the passed width when the width prop is passed 1`] = `
.c0 {
  position: relative;
  width: 123px;
  height: 180px;
  max-width: 480px;
  max-height: 360px;
}

<div
  className="c0"
  width={123}
/>
`;
